--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^6.12.1",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.4",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
